# VIDSNAP

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
packaging/: entry_cli.py  entry_gui.py  vidsnap.iss  vidsnap.spec
scripts/: build_installer.py  fetch_ffmpeg.py  smoke_test.py
tests/: conftest.py  test_cli.py  test_gui.py  test_humanize.py  test_packaging.py  test_paths.py  test_probe.py  test_skeleton.py  test_splitter.py
tests/fixtures/: .gitkeep
vidsnap/: __init__.py  cli.py  ffmpeg.py  gui.py  humanize.py  log.py  paths.py  probe.py  splitter.py
