[project]
name = "vidsnap"
version = "1.0.0"
description = "Split any video into ~2-minute segments locally, with zero quality loss."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "VidSnap" }]
keywords = ["ffmpeg", "video", "split", "segment", "lossless"]
dependencies = []

[project.urls]
Homepage = "https://github.com/vidsnap/vidsnap"

[project.scripts]
vidsnap = "vidsnap.cli:main"

[project.gui-scripts]
vidsnap-gui = "vidsnap.gui:main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.1a1",
    "pytest>=8.3",
]
# Only needed to build the installer (Phase 7); kept out of `dev` so the normal
# quality gates do not drag in PyInstaller.
packaging = [
    "pyinstaller>=6.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vidsnap"]

# ---------------------------------------------------------------------------
# Ruff — linting AND formatting (single tool)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["vidsnap", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["vidsnap"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty — type checking
# ---------------------------------------------------------------------------
[tool.ty.src]
include = ["vidsnap", "scripts", "tests"]

[tool.ty.rules]
# Keep the default strictness; tighten here as the codebase matures.

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "integration: tests that invoke a real ffmpeg/ffprobe binary",
]
